--- a/Milestone 1[Web foundation (HTML ,CSS) and github]/Module 4[More about HTML and CSS]/html5.html
+++ b/Milestone 1[Web foundation (HTML ,CSS) and github]/Module 4[More about HTML and CSS]/html5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 PRACTISE</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <audio controls src="sheep.mp3"></audio>
@@ -11,6 +12,56 @@
     <video controls src="experiment.mp4"></video>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/AWvsXxDtEkU?si=K1e5RwyYaaCfmW5V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1u6xC96glgM?si=3RNJdxKpSLLFAWER" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
+    <main>
+        <section>
+            <form>
+                <h3>Personal imfo</h3>
+                <label for="name">Your name</label>
+                <input type="text" name="" id="name">
+
+                <label for="email">Your email</label>
+                <input type="email" name="" id="email">
+                <fieldset>
+                    <legend>Choosing fvt pitha</legend>
+                    <input type="radio" name="pitha" id="vapa">
+                    <label for="vapa">vapa</label>
+
+                    <input type="radio" name="pitha" id="chitoy">
+                    <label for="chitoy">chitoy</label>
+
+                    <input type="radio" name="pitha" id="jhinuk pitha">
+                    <label for="jhinuk pitha">jhinuk pitha</label>
+                </fieldset>
+                <fieldset>
+                    <legend>Choosing fvt vorta</legend>
+                    <input type="checkbox" name="vorta" id="shorisha">
+                    <label for="shorisha">shorisha</label>
+
+                    <input type="checkbox" name="vorta" id="shutki">
+                    <label for="shutki">shutki</label>
+
+                    <input type="checkbox" name="vorta" id="morich">
+                    <label for="morich">morich</label>
+                </fieldset>
+                <fieldset>
+                    <legend>Extra imfo</legend>
+                    <textarea name="" id="" cols="30" rows="4"></textarea>
+            </fieldset>
+            <input type="submit" value="submit">
+            <input type="reset" value="clear">
+            </form>
+        </section>
+    </main>
+    <main>
+        <section class="hero-conteiner">
+            <div>
+                <h3>Welcome to my website</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum nam velit quo minima praesentium debitis. Saepe exercitationem, repudiandae iusto commodi aliquam sint temporibus molestiae adipisci porro provident optio sequi </p>
+            </div>
+            <div>
+                <img src="programing.jpg" alt="working image">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
