--- a/Milestone 1[Web foundation (HTML ,CSS) and github]/Module 5[Build a beautiful portfolio website]/web development portfolio/index.html
+++ b/Milestone 1[Web foundation (HTML ,CSS) and github]/Module 5[Build a beautiful portfolio website]/web development portfolio/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -33,6 +33,14 @@ Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning be
 
     </header>
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+                .about-item*4>p.item-title+p.item-description
+            </div>
+        
+         </section>
 
     </main>
     <footer>
